tests/sksl/errors/ForTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'int'
    for (int x = 0; x; x++) {}
                    ^
1 error
